Fix Firefox iOS + mobile alignments

--- a/src/styles/scss/_responsive.scss
+++ b/src/styles/scss/_responsive.scss
@@ -24,9 +24,6 @@
 			}
 		}
 
-		#linkblocks {
-			flex-grow: 0.25;
-		}
 	}
 
 	#settings {
